# psa-prizes

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  codacy.yml  mypy.ini  noxfile.py  pyproject.toml  urls.txt
.github/workflows/: test-pypi.yml
docs/: conf.py  index.rst  license.rst  modules.rst  summary.rst
input/: input.csv
output/data/: 1993-magic-gathering-unlimited-black-lotus.csv  1999-pokemon-game-charizard-holo.csv  2002-pokemon-neo-destiny-dark-ampharos-holo.csv  2002-pokemon-neo-destiny-dark-crobat-holo.csv  2002-pokemon-neo-destiny-dark-donphan-holo.csv  2002-pokemon-neo-destiny-dark-espeon-holo.csv  2002-pokemon-neo-destiny-dark-feraligatr-holo.csv  2002-pokemon-neo-destiny-dark-gengar-holo.csv  2002-pokemon-neo-destiny-dark-houndoom-holo.csv  2002-pokemon-neo-destiny-dark-scizor-holo.csv  2002-pokemon-neo-destiny-dark-typhlosion-holo.csv  2002-pokemon-neo-destiny-dark-tyranitar-holo.csv  2002-pokemon-neo-destiny-light-arcanine-holo.csv  2002-pokemon-neo-destiny-light-azumarill-holo.csv  2002-pokemon-neo-destiny-light-dragonite-holo.csv  2002-pokemon-neo-destiny-light-togetic-holo.csv  2002-pokemon-neo-destiny-miracle-energy-holo.csv  2002-pokemon-neo-destiny-shining-celebi.csv  2002-pokemon-neo-destiny-shining-charizard.csv  2002-pokemon-neo-destiny-shining-kabutops.csv  2002-pokemon-neo-destiny-shining-mewtwo.csv  2002-pokemon-neo-destiny-shining-noctowl.csv  2002-pokemon-neo-destiny-shining-raichu.csv  2002-pokemon-neo-destiny-shining-steelix.csv  2002-pokemon-neo-destiny-shining-tyranitar.csv  pokemon-game-charizard-holo-1st-edition.csv
output/nmbrs/: 1993-magic-gathering-unlimited-black-lotus-grade-8.0.json  2002-pokemon-neo-destiny-dark-ampharos-holo-grade-8.0.json  2002-pokemon-neo-destiny-dark-ampharos-holo-grade-9.0.json  2002-pokemon-neo-destiny-dark-crobat-holo-grade-8.0.json  2002-pokemon-neo-destiny-dark-crobat-holo-grade-9.0.json  2002-pokemon-neo-destiny-dark-donphan-holo-grade-8.0.json  2002-pokemon-neo-destiny-dark-donphan-holo-grade-9.0.json  2002-pokemon-neo-destiny-dark-espeon-holo-grade-8.0.json  2002-pokemon-neo-destiny-dark-espeon-holo-grade-9.0.json  2002-pokemon-neo-destiny-dark-feraligatr-holo-grade-8.0.json  2002-pokemon-neo-destiny-dark-feraligatr-holo-grade-9.0.json  2002-pokemon-neo-destiny-dark-gengar-holo-grade-8.0.json  2002-pokemon-neo-destiny-dark-gengar-holo-grade-9.0.json  2002-pokemon-neo-destiny-dark-houndoom-holo-grade-8.0.json  2002-pokemon-neo-destiny-dark-houndoom-holo-grade-9.0.json  2002-pokemon-neo-destiny-dark-scizor-holo-grade-8.0.json  2002-pokemon-neo-destiny-dark-scizor-holo-grade-9.0.json  2002-pokemon-neo-destiny-dark-typhlosion-holo-grade-8.0.json  2002-pokemon-neo-destiny-dark-typhlosion-holo-grade-9.0.json  2002-pokemon-neo-destiny-dark-tyranitar-holo-grade-8.0.json  2002-pokemon-neo-destiny-dark-tyranitar-holo-grade-9.0.json  (+31 more)
tests/: test_analyze.py  test_example_function.py
workflows/: continuous_integration.yml
(+7 files in other folders)
