[tool.poetry]
name = "psa-auctions"
version = "0.1.0"
description = "The PSA auctions project."
authors = ["Tobias Stenzel <tobias.stenzel@mailbox.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tostenzel/psa-auctions"
repository = "https://github.com/tostenzel/psa-auctions"
keywords = ["trading cards", "grading", "PSA", "auctions", "ebay"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.1"
html5lib = "^1.0.1"
pandas = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
psa-auctions = "psa_auctions.psa_scrape:main"
