[tool.poetry]
name = "psa-prizes"
version = "0.1.2"
description = "The PSA prizes project."
authors = ["Tobias Stenzel <tobias.stenzel@mailbox.org>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/tostenzel/psa-prizes"
repository = "https://github.com/tostenzel/psa-prizes"
keywords = ["trading cards", "grading", "PSA", "prizes", "ebay"]
documentation = "https://psa-prizes.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.1"
html5lib = "^1.0.1"
pandas = "^1.0.4"
matplotlib = "^3.2.1"
IPython = "^7.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
coverage = {extras = ["toml"], version = "^5.0.4"}
pytest-cov = "^2.8.1"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.8.7"
mypy = "^0.770"
pytype = {version = "^2020.3.19", python = "3.7"}
flake8-annotations = "^2.1.0"
typeguard = "^2.7.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.2.0"
xdoctest = "^0.12.0"
sphinx = "^3.0.4"
sphinx-autodoc-typehints = "^1.10.3"
restructuredtext-lint = "^1.3.0"
codecov = "2.1.7"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["psa_prizes"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.poetry.scripts]
psa-prizes = "psa_prizes.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

